2004-11-26  JP Rosevear  <jpr@novell.com>

	* gui/alarm-notify/alarm-queue.c (display_notification): ditto

	* gui/e-timezone-entry.c (e_timezone_entry_init): get the image
	directly from the icon factory

2004-11-26  JP Rosevear  <jpr@novell.com>
	
	* gui/alarm-notify/alarm-queue.c (display_notification): prevent
	crash if there is no description

2004-11-25  Harish Krishnaswamy  <kharish@novell.com>

	* gui/calendar-component.c: 
	(new_calendar_cb), (edit_calendar_cb): Use modified_setup_edit_calendar call.
	(popup_event_cb): If source is null (Rt click on a source group), show the new 
	calendar popup menu item. Else, do not show the new calendar option. 
	* gui/dialogs/calendar-setup.[ch] (eccp_get_source_type): Compare the
	source_groups by their uid and not the pointers, so that the correct option
	is activated on the combo box.
	(calendar_setup_edit_calendar) : add a source_group parameter to the function.
	(calendar_setup_new_calendar): Use modified signature of the above function.
	* gui/e-calendar-view.c (on_edit_appointment): check the icalcomponent
	to see if it is a meeting and set the argument to e_calendar_view_edit_appointment
	correctly.

2004-11-25  Chenthill Palanisamy  <pchenthill@novell.com>
		
	* gui/dialogs/event-deitor.c (show_meeting): removed the
	call for comp_editor_show_page, so that the event page
	shows up at first instead of meeting page when a meeting
	is opened.

2004-11-25  Chenthill Palanisamy  <pchenthill@novell.com>

	* calendar-errors.xml: Added two error ids to display use
	it when the meeting is created without a summary.
	* gui/dialogs/send-comp.[ch] (send_component_prompt_subject): Added a 
	function to prompt for a dialog when a meeting/assigned task is sent 
	without a summary.
	* gui/dialogs/comp-editor.c (response_cb): Called the above mentioned
	function when the summary is not present.
	
2004-11-23  Rodney Dawes  <dobey@novell.com>

	* gui/alarm-notify/alarm-notify-dialog.[ch]: